--- a/game.html
+++ b/game.html
@@ -25,6 +25,7 @@
                         </tr>
                         <tr>
                             <td><h2>Effect:</h2></td>
+                            <td><h2 class="displayNum" id="playerEffectDisplay"></h2></td>
                         </tr>
                     </table>
                 </div>
@@ -41,6 +42,7 @@
                         </tr>
                         <tr>
                             <td><h2>Effect:</h2></td>
+                            <td><h2 class="displayNum" id="opponentEffectDisplay"></h2></td>
                         </tr>
                     </table>
                 </div>
