final commit, added logo

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         </div>
     </main>
     <div class="loaderModal" id="loaderModal">
+        <img src="/clientAssets/logo.png" alt="logo">
         <div class="loader">
             <div class="face">
                 <div class="circle"></div>
